# countdown_calender

./: .gitignore  Makefile  README.md  app.json  docker-compose.yml  package-lock.json  package.json  run_compose.sh
.github/workflows/: ci.yml
app/: _layout.jsx  index.jsx  new-event.jsx
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 339803678093_init.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  events.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: event.py  user.py
backend/app/schemas/: __init__.py  auth.py  event.py  user.py
backend/app/services/: event_service.py  user_service.py
backend/docs/: README.md  api.md  setup.md  workflow.md
backend/tests/: conftest.py  test_api.py
frontend/: package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
frontend/apps/web/src/app/: globals.css  layout.tsx  mockBadge.tsx  mockInstaller.tsx  page.tsx  providers.tsx
frontend/apps/web/src/app/(auth)/login/: page.tsx  (+1 more)
frontend/apps/web/src/app/events/: page.tsx
frontend/apps/web/src/app/ui-playground/: page.tsx
frontend/apps/web/src/mocks/: mockApi.ts
frontend/docs/: README.md  roadmap.md  setup.md  structure.md  ui-ux.md  web-app.md
src/context/: EventContext.jsx
src/docs/: PLANNING.md  ROADMAP.md  SCENARIOS.md  TASKS.md  USER_STORIES.md
src/models/: event.js
(+6 files in other folders)
